Fix homepage margin and layout issue

--- a/src/nyc_trees/sass/partials/_globals.scss
+++ b/src/nyc_trees/sass/partials/_globals.scss
@@ -382,3 +382,7 @@ aside {
     }
   }
 }
+
+.nofloat {
+  float: none;
+}
